@@ -169,6 +169,9 @@ primitive Thm.assume_hyps.
 (only makes sense in practice, if outer syntax is delimited
 differently).
 
+* Code generator preprocessor: explicit control of simp tracing
+on a per-constant basis.  See attribute "code_preproc".
+
 * Command 'print_term_bindings' supersedes 'print_binds' for clarity,
 but the latter is retained some time as Proof General legacy.
 
